{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 170,
  "lineage": "42642e9a-3f23-e88b-110b-b96688b114e6",
  "resources": [
    {
      "module": "module.aws_vpc_networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0001b35444eb76534",
            "association_id": "eipassoc-0f07cbcf1f2817aa4",
            "domain": "vpc",
            "id": "eipalloc-0001b35444eb76534",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c845c7ab1d80794e",
            "private_dns": "ip-10-0-10-158.ec2.internal",
            "private_ip": "10.0.10.158",
            "public_dns": "ec2-44-209-39-224.compute-1.amazonaws.com",
            "public_ip": "44.209.39.224",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Environment": "dev",
              "Project": "levva_test"
            },
            "vpc": true
          },
          "dependencies": [
            "module.aws_vpc_networking.aws_internet_gateway.ig",
            "module.aws_vpc_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc_networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987320854306:internet-gateway/igw-09bd53060c73b2876",
            "id": "igw-09bd53060c73b2876",
            "owner_id": "987320854306",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-igw",
              "Project": "levva_test"
            },
            "vpc_id": "vpc-0fc0755a747ec2b59"
          },
          "dependencies": [
            "module.aws_vpc_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc_networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0001b35444eb76534",
            "connectivity_type": "public",
            "id": "nat-03392849ea499b546",
            "network_interface_id": "eni-0c845c7ab1d80794e",
            "private_ip": "10.0.10.158",
            "public_ip": "44.209.39.224",
            "subnet_id": "subnet-08615da18ab5e6a58",
            "tags": {
              "Name": "dev-nat"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-nat",
              "Project": "levva_test"
            }
          },
          "dependencies": [
            "module.aws_vpc_networking.aws_eip.nat_eip",
            "module.aws_vpc_networking.aws_internet_gateway.ig",
            "module.aws_vpc_networking.aws_subnet.public_subnet",
            "module.aws_vpc_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc_networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d19bde4790a9bc301080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03392849ea499b546",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d19bde4790a9bc30",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc_networking.aws_eip.nat_eip",
            "module.aws_vpc_networking.aws_internet_gateway.ig",
            "module.aws_vpc_networking.aws_nat_gateway.nat",
            "module.aws_vpc_networking.aws_route_table.private",
            "module.aws_vpc_networking.aws_subnet.public_subnet",
            "module.aws_vpc_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc_networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09bd53060c73b2876",
            "id": "r-rtb-0c24db6619279fa741080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c24db6619279fa74",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc_networking.aws_internet_gateway.ig",
            "module.aws_vpc_networking.aws_route_table.public",
            "module.aws_vpc_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc_networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987320854306:route-table/rtb-0d19bde4790a9bc30",
            "id": "rtb-0d19bde4790a9bc30",
            "owner_id": "987320854306",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03392849ea499b546",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "Project": "levva_test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc0755a747ec2b59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc_networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987320854306:route-table/rtb-0c24db6619279fa74",
            "id": "rtb-0c24db6619279fa74",
            "owner_id": "987320854306",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09bd53060c73b2876",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "Project": "levva_test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc0755a747ec2b59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc_networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e9d091701e114dc",
            "route_table_id": "rtb-0d19bde4790a9bc30",
            "subnet_id": "subnet-0394787ef1b497c98"
          },
          "dependencies": [
            "module.aws_vpc_networking.aws_route_table.private",
            "module.aws_vpc_networking.aws_subnet.private_subnet",
            "module.aws_vpc_networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba906ab2bca0bd84",
            "route_table_id": "rtb-0d19bde4790a9bc30",
            "subnet_id": "subnet-07958a08d76cfb2eb"
          },
          "dependencies": [
            "module.aws_vpc_networking.aws_route_table.private",
            "module.aws_vpc_networking.aws_subnet.private_subnet",
            "module.aws_vpc_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc_networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083155d3aad1d3fa1",
            "route_table_id": "rtb-0c24db6619279fa74",
            "subnet_id": "subnet-08615da18ab5e6a58"
          },
          "dependencies": [
            "module.aws_vpc_networking.aws_route_table.public",
            "module.aws_vpc_networking.aws_subnet.public_subnet",
            "module.aws_vpc_networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0564e5b10e3e46a06",
            "route_table_id": "rtb-0c24db6619279fa74",
            "subnet_id": "subnet-04cc86c0d4590372f"
          },
          "dependencies": [
            "module.aws_vpc_networking.aws_route_table.public",
            "module.aws_vpc_networking.aws_subnet.public_subnet",
            "module.aws_vpc_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc_networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987320854306:security-group/sg-06f5e01dc765d59d1",
            "description": "Default security group to allow inbound/outbound from the VPC",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-06f5e01dc765d59d1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "dev-default-sg",
            "name_prefix": "",
            "owner_id": "987320854306",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "Project": "levva_test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc0755a747ec2b59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc_networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987320854306:subnet/subnet-0394787ef1b497c98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0394787ef1b497c98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "987320854306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Subnet_type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "levva_test",
              "Subnet_type": "Private"
            },
            "vpc_id": "vpc-0fc0755a747ec2b59"
          },
          "dependencies": [
            "module.aws_vpc_networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987320854306:subnet/subnet-07958a08d76cfb2eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07958a08d76cfb2eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "987320854306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Subnet_type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "levva_test",
              "Subnet_type": "Private"
            },
            "vpc_id": "vpc-0fc0755a747ec2b59"
          },
          "dependencies": [
            "module.aws_vpc_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc_networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987320854306:subnet/subnet-08615da18ab5e6a58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08615da18ab5e6a58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "987320854306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Subnet_type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "levva_test",
              "Subnet_type": "Public"
            },
            "vpc_id": "vpc-0fc0755a747ec2b59"
          },
          "dependencies": [
            "module.aws_vpc_networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987320854306:subnet/subnet-04cc86c0d4590372f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04cc86c0d4590372f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "987320854306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Subnet_type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "levva_test",
              "Subnet_type": "Public"
            },
            "vpc_id": "vpc-0fc0755a747ec2b59"
          },
          "dependencies": [
            "module.aws_vpc_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc_networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987320854306:vpc/vpc-0fc0755a747ec2b59",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dc455af24761dee0",
            "default_route_table_id": "rtb-0a5b749d4ec413ef1",
            "default_security_group_id": "sg-0d94a552c9e27264d",
            "dhcp_options_id": "dopt-81a45cfb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fc0755a747ec2b59",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a5b749d4ec413ef1",
            "owner_id": "987320854306",
            "tags_all": {
              "Environment": "dev",
              "Project": "levva_test"
            }
          }
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "module.ecs.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:987320854306:loadbalancer/app/node-js-app-dev-sg/3bb06d1d838f6920",
            "arn_suffix": "app/node-js-app-dev-sg/3bb06d1d838f6920",
            "desync_mitigation_mode": "defensive",
            "dns_name": "node-js-app-dev-sg-1234451335.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:987320854306:loadbalancer/app/node-js-app-dev-sg/3bb06d1d838f6920",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "node-js-app-dev-sg",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c23f37d05f6ad691"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04cc86c0d4590372f"
              },
              {
                "subnet_id": "subnet-08615da18ab5e6a58"
              }
            ],
            "subnets": [
              "subnet-04cc86c0d4590372f",
              "subnet-08615da18ab5e6a58"
            ],
            "tags_all": {
              "Environment": "dev"
            },
            "vpc_id": "vpc-0fc0755a747ec2b59",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.aws_vpc_networking.aws_subnet.public_subnet",
            "module.aws_vpc_networking.aws_vpc.vpc",
            "module.ecs.aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "module.ecs.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:987320854306:listener/app/node-js-app-dev-sg/3bb06d1d838f6920/fab74c054afded8b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:987320854306:targetgroup/node-js-app-dev-tg/9bdbcf2e0d2c89a3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:987320854306:listener/app/node-js-app-dev-sg/3bb06d1d838f6920/fab74c054afded8b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:987320854306:loadbalancer/app/node-js-app-dev-sg/3bb06d1d838f6920",
            "port": 3000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc_networking.aws_subnet.public_subnet",
            "module.aws_vpc_networking.aws_vpc.vpc",
            "module.ecs.aws_alb.application_load_balancer",
            "module.ecs.aws_lb_target_group.target_group",
            "module.ecs.aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "module.ecs.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:987320854306:targetgroup/node-js-app-dev-tg/9bdbcf2e0d2c89a3",
            "arn_suffix": "targetgroup/node-js-app-dev-tg/9bdbcf2e0d2c89a3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 300,
                "matcher": "200",
                "path": "/status",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:987320854306:targetgroup/node-js-app-dev-tg/9bdbcf2e0d2c89a3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "node-js-app-dev-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "dev"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0fc0755a747ec2b59"
          },
          "dependencies": [
            "module.aws_vpc_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "module.ecs.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987320854306:security-group/sg-0c23f37d05f6ad691",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c23f37d05f6ad691",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "terraform-20230214051657451600000001",
            "name_prefix": "terraform-",
            "owner_id": "987320854306",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc0755a747ec2b59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service-security-group",
      "provider": "module.ecs.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987320854306:security-group/sg-0a78d243fcee74815",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a78d243fcee74815",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0c23f37d05f6ad691"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "node-js-app-dev-sg",
            "name_prefix": "",
            "owner_id": "987320854306",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc0755a747ec2b59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc_networking.aws_vpc.vpc",
            "module.ecs.aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    }
  ]
}